# geomys

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: About Geomys  BUILD.md  JOURNAL.md  MULTI-WINDOW-PLAN.md  NETWORK-ANALYSIS.md  ROADMAP.md  THEMES.md  shared-gworld-plan.md
include/: MacTCP.h  imgparse.h
resources/: Balloons.r  geomys.r
scripts/: build.sh  deploy.sh  release.sh
src/: browser.c  browser.h  cache.c  cache.h  clipboard.c  clipboard.h  color.c  color.h  connection.c  connection.h  content.c  content.h  cp437.c  cp437.h  dialogs.c  dialogs.h  dns.c  dns.h  drag.c  drag.h  favorites.c  favorites.h  glyphs.c  glyphs.h  gopher.c  gopher.h  gopher_icons.c  gopher_icons.h  gopher_types.c  gopher_types.h  gopherplus.c  gopherplus.h  history.c  history.h  html.c  html.h  imgparse.c  macutil.c  macutil.h  main.c  (+19 more)
src/themes/: README.md  amber_crt.h  classic.h  dark.h  dracula.h  green_screen.h  gruvbox.h  light.h  monokai.h  nord.h  platinum.h  solarized_dark.h  solarized_light.h  system7.h  tokyo_dark.h  tokyo_light.h
